code25_all/scala/16171986.txt
import com.cycling74.max.MaxObject;

public class FirstClass extends MaxObject{
    public FirstClass{
        post("Hello From Java");
    }
} 

import com.cycling74.max._

class FirstClass() extends MaxObject {
    super.post("Hello from Scala")
}

dm$ scalac -cp max.jar FirstClass.scala 
FirstClass.scala:3: error: value post is not a member of com.cycling74.max.MaxObject with ScalaObject
    super.post("Hello from Scala")
              ^
one error found

MXJ System CLASSPATH:
   /Applications/Max 6.1/Cycling '74/java/lib/jitter.jar
   /Applications/Max 6.1/Cycling '74/java/lib/jode-1.1.2-pre-embedded.jar
   /Applications/Max 6.1/Cycling '74/java/lib/max.jar
MXJClassloader CLASSPATH:
   /Applications/Max 6.1/Cycling '74/java/classes/
   /Users/dm/maxmsp/classes
   /Users/dm/maxmsp/jars/jline.jar
   /Users/dm/maxmsp/jars/scala-compiler.jar
   /Users/dm/maxmsp/jars/scala-dbc.jar
   /Users/dm/maxmsp/jars/scala-library.jar
   /Users/dm/maxmsp/jars/scala-partest.jar
   /Users/dm/maxmsp/jars/scala-swing.jar
   /Users/dm/maxmsp/jars/scalacheck.jar
   /Users/dm/maxmsp/jars/scalap.jar
Jitter initialized
Jitter Java support installed
Hello from Scala

